--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "nezamy/route": "^1.2",
         "cakephp/i18n": "^3.6",
         "gregwar/formidable": "^2.1",
-        "google/recaptcha": "^1.2"
+        "google/recaptcha": "^1.2",
+        "thamaraiselvam/mysql-import": "^1.0"
     },
     "autoload": {
       "psr-4": {
